add image build-time environment variable support (#43)
* add build time environment variable support

* bump image version and update test-coverage target
